lox-tests/tests/while/class_in_body.stderr
ERROR: at 'class': Expected expression, got Class
 --> 2:14
  |
2 | while (true) class Foo {}
  |              ^---^
